--- a/UpSpace/Podfile
+++ b/UpSpace/Podfile
@@ -1,3 +1,5 @@
+platform :ios, '12.0'
+
 target 'UpSpace' do
    use_frameworks!
 
@@ -6,5 +8,6 @@ target 'UpSpace' do
    pod 'Alamofire'
    pod 'SwiftDate'
    pod 'Tabman'
-
+   pod 'SnapKit' 
+   pod 'TableKit'
 end
