--- a/UpSpace/Podfile
+++ b/UpSpace/Podfile
@@ -25,3 +25,11 @@ target 'UpSpace' do
    pod 'RxSwiftExt'
    pod 'RxOptional'
 end
+
+post_install do |pi|
+    pi.pods_project.targets.each do |t|
+      t.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      end
+    end
+end
