--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: Bundle Install
-      run: bundle install
-
-    - name: Brew Upgrade
-      run: |
-        brew update-reset
-        brew bundle --no-upgrade
+    - name: Set up Ruby 3.0.0
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 3.0.0
+        bundler-cache: true
   
     - name: Run Danger
       run: bundle exec danger
