--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,6 @@ jobs:
     - name: Run Danger
       env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: bundle exec danger
+      run: |
+        eval "$(ssh-agent -s)"
+        bundle exec danger
